# docs/swagger.yaml
@@ -186,6 +186,8 @@ paths:
           description: Internal Server Error
           schema:
             type: error
+      security:
+      - BearerToken: []
       summary: Get all regiter types
       tags:
       - register type
@@ -205,6 +207,8 @@ paths:
           description: Internal Server Error
           schema:
             type: error
+      security:
+      - BearerToken: []
       summary: Get all transactions
       tags:
       - transaction
@@ -232,6 +236,8 @@ paths:
           description: Internal Server Error
           schema:
             type: error
+      security:
+      - BearerToken: []
       summary: Create transaction
       tags:
       - transaction
@@ -257,6 +263,8 @@ paths:
           description: Internal Server Error
           schema:
             type: error
+      security:
+      - BearerToken: []
       summary: Cancel transaction
       tags:
       - transaction
@@ -283,6 +291,8 @@ paths:
           description: Internal Server Error
           schema:
             type: error
+      security:
+      - BearerToken: []
       summary: Get transaction by id
       tags:
       - transaction
@@ -302,6 +312,8 @@ paths:
           description: Internal Server Error
           schema:
             type: error
+      security:
+      - BearerToken: []
       summary: Get all user types
       tags:
       - user type
@@ -329,6 +341,8 @@ paths:
           description: Internal Server Error
           schema:
             type: error
+      security:
+      - BearerToken: []
       summary: Get user type by id
       tags:
       - user type
@@ -348,6 +362,8 @@ paths:
           description: Internal Server Error
           schema:
             type: error
+      security:
+      - BearerToken: []
       summary: Get all users
       tags:
       - user
@@ -402,6 +418,8 @@ paths:
           description: Internal Server Error
           schema:
             type: error
+      security:
+      - BearerToken: []
       summary: Get users by id
       tags:
       - user
@@ -421,6 +439,8 @@ paths:
           description: Internal Server Error
           schema:
             type: error
+      security:
+      - BearerToken: []
       summary: Get all wallets
       tags:
       - wallet
@@ -448,7 +468,14 @@ paths:
           description: Internal Server Error
           schema:
             type: error
+      security:
+      - BearerToken: []
       summary: Get wallet by id
       tags:
       - wallet
+securityDefinitions:
+  BearerToken:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
